<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp">
        <include  layout="@layout/toolbar_recommended" />
    </androidx.cardview.widget.CardView>


    <WebView
        android:id="@+id/webView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <TextView android:textSize="16sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="17.7dp" android:text="@string/what_is_lorem_ipsum"/>
    <TextView android:textSize="13sp" android:textColor="@color/smoke_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="13.3dp" android:layout_marginRight="16dp" android:text="@string/description" android:lineSpacingExtra="4dp" android:fontFamily="@font/sf_pro_display_regular"/>
    <TextView android:textSize="16sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="17.7dp" android:text="@string/where_can_i_get_some"/>
    <TextView android:textSize="13sp" android:textColor="@color/smoke_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="13.3dp" android:layout_marginRight="16dp" android:text="@string/description_subtext" android:lineSpacingExtra="4dp" android:fontFamily="@font/sf_pro_display_regular"/>
</LinearLayout>
