<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:text="@string/welcome_to_Kisan"
        android:fontFamily="@font/sf_pro_display_semibold"/>
    <TextView android:textSize="16sp"
        android:textColor="@color/smoke_gray"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/let_s_first_check_that_we_deliver_to_nyour_address"
        android:lineSpacingExtra="3dp" android:fontFamily="@font/sf_pro_display_regular"
        android:textAlignment="center"/>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:src="@drawable/ic_location_icon"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.5dp"
        android:text="@string/choose_location"
        android:fontFamily="@font/sf_pro_display_bold"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/smoke_gray"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_your_location_and_nstart_shopping"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textAlignment="center"/>
    <Button android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/rectangle_green"
        android:paddingLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44.5dp"
        android:layout_marginRight="30dp"
        android:text="@string/use_current_location"
        android:drawablePadding="17.5dp"
        android:drawableStart="@drawable/ic_icon_current"
        android:fontFamily="@font/sf_pro_display_bold"
        android:textAlignment="textStart"/>
    <TextView
        android:visibility="gone"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"

        android:fontFamily="@font/sf_pro_display_semibold"/>
</LinearLayout>
