<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="301dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:background="@drawable/rectangle_home_gray"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="50dp">



    <TextView
        android:id="@+id/txt_vegType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/sfpro_display_bold"
        android:text="@string/Vegetable"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="11dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/ripple_orange"
        android:fontFamily="@font/sfpro_display_medium"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:text="@string/Subscribe"
        android:textColor="@color/white"
        android:textSize="11sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:layout_marginRight="63dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:letterSpacing="0.25"
        android:text="@string/fresh"
        android:textColor="@color/black"
        android:textSize="13sp" />
</LinearLayout>
