<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/backgroundlogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvTitleOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="District"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#4CAF50"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <TextView android:id="@+id/hideDistrictId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="hidden value"
        android:textSize="20dp"
        android:visibility="gone"
        />

    <SearchView
        android:id="@+id/searchViewDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:queryHint="@string/search_here"
        android:iconifiedByDefault="false"
        android:layout_alignParentTop="true"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_vriety"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_weight="1.0"
        android:visibility="visible" />


    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/uiv3_divider_color" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:textSize="20dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:height="40dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/sfpro_display_bold"
            android:background="@drawable/btn_backnext"
            android:id="@+id/btnbackVariety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/back"
            android:layout_weight="1"

            />
        <Button
            android:textSize="20dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:height="40dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/sfpro_display_bold"
            android:background="@drawable/btn_backnext"
            android:id="@+id/btnFilterData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/select_data"

            />


        <Button
            android:fontFamily="@font/sfpro_display_bold"
            android:id="@+id/btnnextVariety"
            android:background="@drawable/btn_backnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:height="40dp"
            android:text="@string/next"
            android:textColor="@android:color/white" />


    </LinearLayout>

</LinearLayout>